crates/aiken-lang/src/tests/snapshots/anonymous_function.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "Code:\n\npub fn such() -> Int {\n  let add_one = fn (a: Int) -> Int { a + 1 }\n\n  2 |> add_one\n}\n"
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        Fn(
            Function {
                arguments: [],
                body: Sequence {
                    location: 25..83,
                    expressions: [
                        Assignment {
                            location: 25..67,
                            value: Fn {
                                location: 39..67,
                                fn_style: Plain,
                                arguments: [
                                    Arg {
                                        arg_name: Named {
                                            name: "a",
                                            label: "a",
                                            location: 43..44,
                                            is_validator_param: false,
                                        },
                                        location: 43..49,
                                        annotation: Some(
                                            Constructor {
                                                location: 46..49,
                                                module: None,
                                                name: "Int",
                                                arguments: [],
                                            },
                                        ),
                                        tipo: (),
                                    },
                                ],
                                body: BinOp {
                                    location: 60..65,
                                    name: AddInt,
                                    left: Var {
                                        location: 60..61,
                                        name: "a",
                                    },
                                    right: Int {
                                        location: 64..65,
                                        value: "1",
                                        base: Decimal {
                                            numeric_underscore: false,
                                        },
                                    },
                                },
                                return_annotation: Some(
                                    Constructor {
                                        location: 54..57,
                                        module: None,
                                        name: "Int",
                                        arguments: [],
                                    },
                                ),
                            },
                            pattern: Var {
                                location: 29..36,
                                name: "add_one",
                            },
                            kind: Let,
                            annotation: None,
                        },
                        PipeLine {
                            expressions: [
                                Int {
                                    location: 71..72,
                                    value: "2",
                                    base: Decimal {
                                        numeric_underscore: false,
                                    },
                                },
                                Var {
                                    location: 76..83,
                                    name: "add_one",
                                },
                            ],
                            one_liner: true,
                        },
                    ],
                },
                doc: None,
                location: 0..20,
                name: "such",
                public: true,
                return_annotation: Some(
                    Constructor {
                        location: 17..20,
                        module: None,
                        name: "Int",
                        arguments: [],
                    },
                ),
                return_type: (),
                end_position: 84,
                can_error: true,
            },
        ),
    ],
    kind: Validator,
}
