crates/aiken-lang/src/tests/snapshots/base16_bytearray_literals.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "Code:\n\npub const my_policy_id = #\"00aaff\"\n\npub fn foo() {\n    my_policy_id == #\"00aaff\"\n}\n"
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        ModuleConstant(
            ModuleConstant {
                doc: None,
                location: 0..34,
                public: true,
                name: "my_policy_id",
                annotation: None,
                value: ByteArray {
                    location: 25..34,
                    bytes: [
                        0,
                        170,
                        255,
                    ],
                    preferred_format: HexadecimalString,
                },
                tipo: (),
            },
        ),
        Fn(
            Function {
                arguments: [],
                body: BinOp {
                    location: 55..80,
                    name: Eq,
                    left: Var {
                        location: 55..67,
                        name: "my_policy_id",
                    },
                    right: ByteArray {
                        location: 71..80,
                        bytes: [
                            0,
                            170,
                            255,
                        ],
                        preferred_format: HexadecimalString,
                    },
                },
                doc: None,
                location: 36..48,
                name: "foo",
                public: true,
                return_annotation: None,
                return_type: (),
                end_position: 81,
                can_error: true,
            },
        ),
    ],
    kind: Validator,
}
