crates/aiken-lang/src/tests/snapshots/capture_right_hand_side_assign.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\nfn foo() {\n    let (_aa, bb, _cc) = bar(foo: _a, _b, _)\n    let _ = baz(_d, [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23])\n    bb\n}\n"
---
fn foo() {
  let (_aa, bb, _cc) = bar(foo: _a, _b, _)
  let _ = baz(_d, [
    1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21,
    22, 23,
  ])
  bb
}
