crates/aiken-lang/src/tests/snapshots/decorators_on_constructor.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\ntype Datum {\n  @tag(420)\n  Yes\n  @tag(69)\n  No\n}\n"
---
type Datum {
  @tag(420)
  Yes
  @tag(69)
  No
}
